--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,14 +151,126 @@ section {
 
 .section3 {
     position: relative;
+    padding-top: 18.4rem;
 }
 
-.section3 .pf-group {
+.section3 .hd-group {
     display: flex;
+    position: relative;
+    z-index: 4;
+    font-size: 3.2rem;
+}
+
+.section3 .hd-group .hd-tit,
+.section3 .hd-group .hd-txt {
+    flex: 1;
+    color: #fff;
+    font-weight: 700;
+}
+
+.font-hw {
+    font-family: 'hanwha', sans-serif !important;
+}
+
+.section3 .link-group {
+    display: flex;
+    position: relative;
+    z-index: 4;
+    flex-direction: column;
+    gap: 28rem;
+    padding: 29.9rem 0 20rem;
+}
+
+.section3 .link-group a {
+    display: block;
+}
+
+.section3 .link-group a.link01 {
+    align-self: flex-end;
+}
+
+.section3 .link-group a.link02 {
+    align-self: flex-start;
+}
+
+.section3 .link-group a.link03 {
+    align-self: flex-end;
+}
+
+.section3 .link-group a hr {
+    display: block;
+    height: 2px;
+    margin-bottom: 8rem;
+    background: #fff;
+    border: 0 none;
+    opacity: .6;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: .5s ease-in-out;
+}
+
+.section3 .link-tit {
+    display: flex;
+}
+
+.section3 .link-tit h4 {
+    color: #fff;
+    font-size: 10rem;
+    font-weight: 700;
+    line-height: 1.28;
+    word-wrap: break-word;
+}
+
+.section3 .link-tit .link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    flex: none;
+    width: 8.8rem;
+    height: 8.8rem;
+    background: rgba(255, 255, 255, .2);
+    border-radius: 100%;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    --color: var(--c_white);
+}
+
+.section3 .link-tit i {
+    width: 4rem;
+    height: 4rem;
+}
+
+.section3 .link-tit i svg {
+    transform: rotate(90deg);
+}
+
+.section3 .link-txt {
+    margin-top: 4rem;
+    color: #fff;
+}
+
+.section3 .link-txt .sub-txt1,
+.section3 .link-txt .sub-txt2 {
+    white-space: pre-line;
+    line-height: 1.5;
+}
+
+.section3 .link-txt .sub-txt1 {
+    font-size: 3.2rem;
+}
+
+.section3 .link-txt .sub-txt2 {
+    font-size: 2rem;
 }
 
 .section3 .bg {
     position: absolute;
     inset: 0;
     z-index: 3;
+}
+
+.section3 .bg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
